Added Redis repository, configured Unity container

--- a/BM.Website/Web.config
+++ b/BM.Website/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BooksShop"  connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=BooksShop;Data Source=WNET-B12040\SQLEXPRESS" providerName="System.Data.SqlClient" />
+    <add name="BooksShop" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=BooksShop;Data Source=WNET-B12040\SQLEXPRESS" providerName="System.Data.SqlClient" />
+    <add name="NoSqlBooksShop" connectionString="localhost" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -49,7 +50,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
