--- a/BM.Website/packages.config
+++ b/BM.Website/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
@@ -14,4 +15,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
 </packages>
